# ChangeLog for dev-perl/XML-Parser
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Parser/ChangeLog,v 1.58 2012/05/13 09:48:38 grobian Exp $

  13 May 2012; Fabian Groffen <grobian@gentoo.org> XML-Parser-2.410.0.ebuild:
  Marked ~x64-freebsd

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> XML-Parser-2.410.0.ebuild:
  keyword ~amd64-fbsd

  17 Apr 2012; Brent Baude <ranger@gentoo.org> XML-Parser-2.410.0.ebuild:
  Marking XML-Parser-2.410.0 ppc64 for bug 410367

  16 Apr 2012; Brent Baude <ranger@gentoo.org> XML-Parser-2.410.0.ebuild:
  Marking XML-Parser-2.410.0 ppc for bug 410367

  06 Apr 2012; Markus Meier <maekke@gentoo.org> XML-Parser-2.410.0.ebuild:
  arm stable, bug #410367

  04 Apr 2012; Jeff Horelick <jdhore@gentoo.org> XML-Parser-2.410.0.ebuild:
  marked x86 per bug 410367

  03 Apr 2012; Jeroen Roovers <jer@gentoo.org> XML-Parser-2.410.0.ebuild:
  Stable for HPPA (bug #410367).

  02 Apr 2012; Agostino Sarubbo <ago@gentoo.org> XML-Parser-2.410.0.ebuild:
  Stable for amd64, wrt bug #410367

  30 Jul 2011; Torsten Veller <tove@gentoo.org> XML-Parser-2.36-r1.ebuild,
  XML-Parser-2.410.0.ebuild:
  Drop ~sparc-fbsd KEYWORD

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -XML-Parser-2.36.ebuild,
  -XML-Parser-2.40.ebuild:
  Cleanup

*XML-Parser-2.410.0 (03 Jun 2011)

  03 Jun 2011; Torsten Veller <tove@gentoo.org> +XML-Parser-2.410.0.ebuild:
  Version bump

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  XML-Parser-2.36-r1.ebuild:
  ppc64 stable wrt #341865

*XML-Parser-2.40 (16 Sep 2010)

  16 Sep 2010; Torsten Veller <tove@gentoo.org> +XML-Parser-2.40.ebuild:
  Version bump. Use EXPATLIBPATH and EXPATINCPATH

  27 Jun 2010; <nixnut@gentoo.org> XML-Parser-2.36-r1.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> XML-Parser-2.36-r1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #314467
