@@ -4,13 +4,13 @@ Hash: SHA1
 DIST XML-Parser-2.36.tar.gz 230002 RMD160 1c31a2398ada943efd5d2451389e163914168253 SHA1 74acac4f939ebf788d8ef5163cbc9802b1b04bfa SHA256 9fd529867402456bd826fe0e5588d35b3a2e27e586a2fd838d1352b71c2ed73f
 DIST XML-Parser-2.41.tar.gz 238441 RMD160 61252e5f33b205246f51c668180311e6cbd60111 SHA1 68c7ee61b413c2e8255699b1987fca598e0a39d8 SHA256 b48197cd2265a26c5f016489f11a7b450d8833cb8b3d6a46ee15975740894de9
 EBUILD XML-Parser-2.36-r1.ebuild 820 RMD160 770e14d4080c81fe07dba0c2b459db3cc942b193 SHA1 b85bbe863fbbef30c74385f2deb27e6df4e78b3e SHA256 5bb2d09bded15fd6bc272fbc498c815590073cec338c26be6df55af6e465749d
-EBUILD XML-Parser-2.410.0.ebuild 822 RMD160 f213fa75045d1049fbdfc451a2a99fccaa472bcf SHA1 5292cbbd0356f1499d97e6929ce5df53c63bd286 SHA256 0461a2e9de8c23a47d8aa8acae704e1aa0f362dcb82f39af6605bb5a18c378c9
-MISC ChangeLog 6992 RMD160 905049f55dd94a90f1d0a6d82a4fe6f049071751 SHA1 0982f40ca09d46015fa33119bf2eefd85e8ff2e1 SHA256 a657c49485562686af27ece5e0332b2725de2ffd7fe08e2d9820a6b74dff3394
+EBUILD XML-Parser-2.410.0.ebuild 833 RMD160 831a0db66da2a89d1c2e0cccedb8245b2cbfbba0 SHA1 65bf1f9b7e5d335bd5fe6e9b60801e4273bf54e7 SHA256 6ea17b56aaf907cb2550bf0d3ab402c163f6b5fd0dd4f760fdf8248ba3de3208
+MISC ChangeLog 7104 RMD160 0e36d0a298a76a96b76b211097663ed6dd4b95dc SHA1 14bef90bc48a614ff47500c29473a03a20a5613c SHA256 fbea57345101023a7827194f3b69a86042b9adb733185addff144a743760dd6e
 MISC metadata.xml 236 RMD160 dec11a4bf2dfe9ada172f266a1bdf720ce687096 SHA1 f7df26a17f0aad5b7722671bb673b19ec633ca8a SHA256 48fa247feb0f412b7976a357c7d6c07bf705ab8ccb855b4ff882fb7641bc2406
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk+vg3sACgkQX3X2B8XHTolaAQCfRANEF45qDgcEyZUTxj3X9MTF
-9zsAn39vo6ZXAPXjbFJM4TzsrxuBs2eb
-=UDIP
+iEYEARECAAYFAk+vz/oACgkQX3X2B8XHTomg+gCfdsA7xk7wsbLJPS/NucZHrEud
+MwMAoJYvvWEENarBgA/HjSbdo+O/QvVy
+=FWQ3
 -----END PGP SIGNATURE-----
