@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/PodParser-1.510.0.ebuild,v 1.1 2012/05/02 14:24:29 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/PodParser-1.510.0.ebuild,v 1.2 2012/05/13 15:34:41 tove Exp $
 
 EAPI=4
 
@@ -10,9 +10,15 @@ MODULE_VERSION=1.51
 inherit perl-module
 
 DESCRIPTION="Base class for creating POD filters and translators"
+SRC_URI+=" http://dev.gentoo.org/~tove/distfiles/perl-core/PodParser/Pod-Parser-1.54-patch.tar.bz2"
 
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
 SRC_TEST="do"
+
+EPATCH_SUFFIX=patch
+PATCHES=(
+	"${WORKDIR}"/${MY_PN:-${PN}}-patch
+)
