@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/PodParser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.54 2012/05/02 14:24:29 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.55 2012/05/13 15:34:41 tove Exp $
+
+  13 May 2012; Torsten Veller <tove@gentoo.org> PodParser-1.510.0.ebuild:
+  Make AUTHOR a string in Makefile.PL (#415235)
 
 *PodParser-1.510.0 (02 May 2012)
 
